==> BerkeleyLab/Marble-MMC/board_support/marble_v2/marble_board.c <==
#include "stm32f2xx_hal.h"
#include "marble_api.h"
#include "string.h"
#include <stdio.h>

void marble_UART_init(void)
{
   /* PA9, PA10 - MMC_CONS_PROG */
   MX_USART1_UART_Init();
   /* PD5, PD6 - UART4 (Pmod3_7/3_6) */
   MX_USART2_UART_Init();
}

int marble_UART_send(const char *str, int size)
{
   HAL_UART_Transmit(&huart1, (const uint8_t *) str, size, 1000);
   return 1;
}

int marble_UART_recv(char *str, int size)
{
   if (__HAL_UART_GET_FLAG(&huart1, UART_FLAG_RXNE) == SET) {
      HAL_UART_Receive(&huart1, (uint8_t *) str, size, 100);
      return 1;
   } else {
      return 0;
   }
}

void marble_LED_set(uint8_t led_num, bool on)
{
   if (led_num < MAXLEDS) {
      /* Set state, low is on, high is off */
      HAL_GPIO_WritePin(GPIOE, ledpins[led_num], !on);
   }
}

bool marble_LED_get(uint8_t led_num)
{
   bool state = false;

   if (led_num < MAXLEDS) {
      state = HAL_GPIO_ReadPin(GPIOE, ledpins[led_num]);
   }

   /* These LEDs are reverse logic. */
   return !state;
}

void marble_LED_toggle(uint8_t led_num)
{
   if (led_num < MAXLEDS) {
      HAL_GPIO_TogglePin(GPIOE, ledpins[led_num]);
   }
}

void marble_FMC_pwr(bool on)
{
   HAL_GPIO_WritePin(GPIOD, GPIO_PIN_9, on);
   HAL_GPIO_WritePin(GPIOD, GPIO_PIN_10, on);
}

uint8_t marble_FMC_status(void)
{
   uint8_t status = 0;
   status = WRITE_BIT(status, M_FMC_STATUS_FMC1_PWR,  HAL_GPIO_ReadPin(GPIOD, GPIO_PIN_10));
   status = WRITE_BIT(status, M_FMC_STATUS_FMC1_FUSE, HAL_GPIO_ReadPin(GPIOC, GPIO_PIN_10));
   status = WRITE_BIT(status, M_FMC_STATUS_FMC2_PWR,  HAL_GPIO_ReadPin(GPIOD, GPIO_PIN_9));
   status = WRITE_BIT(status, M_FMC_STATUS_FMC2_FUSE, HAL_GPIO_ReadPin(GPIOC, GPIO_PIN_11));
   return status;
}

void marble_PSU_pwr(bool on)
{
   if (on == false) {
      SystemClock_Config_HSI(); // switch to internal clock source, external clock is powered from 3V3!
      marble_SLEEP_ms(50);
      HAL_GPIO_WritePin(GPIOD, GPIO_PIN_11, on);
   } else {
      HAL_GPIO_WritePin(GPIOD, GPIO_PIN_11, on);
      SystemClock_Config(); // switch back to external clock source
   }
}

uint8_t marble_PWR_status(void)
{
   uint8_t status = 0;
   status = WRITE_BIT(status, M_PWR_STATUS_PSU_EN, HAL_GPIO_ReadPin(GPIOD, GPIO_PIN_11));
   status = WRITE_BIT(status, M_PWR_STATUS_POE,    HAL_GPIO_ReadPin(GPIOC, GPIO_PIN_8));
   status = WRITE_BIT(status, M_PWR_STATUS_OTEMP,  HAL_GPIO_ReadPin(GPIOC, GPIO_PIN_7));
   return status;
}

bool marble_FPGAint_get(void)
{
   if (HAL_GPIO_ReadPin(GPIOA, GPIO_PIN_3)) {
      return false;
   }
   return true;
}

void reset_fpga(void)
{
   /* Pull the PROGRAM_B pin low; it's spelled PROG_B on schematic */
   HAL_GPIO_WritePin(GPIOC, GPIO_PIN_0, false);
   marble_SLEEP_ms(50);
   HAL_GPIO_WritePin(GPIOC, GPIO_PIN_0, true);
}

void marble_GPIOint_init(void)
{
   /*Configure GPIO pin : PD0 - FPGA_DONE rising edge interrupt */
   GPIO_InitTypeDef GPIO_InitStruct = {0};
   GPIO_InitStruct.Pin = GPIO_PIN_0;
   GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING;
   GPIO_InitStruct.Pull = GPIO_NOPULL;
   HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);

   /* Enable interrupt in the NVIC */
   HAL_NVIC_SetPriority(EXTI0_IRQn, 0, 0);
   HAL_NVIC_EnableIRQ(EXTI0_IRQn);
}

int marble_I2C_probe(I2C_BUS I2C_bus, uint8_t addr) {
   return HAL_I2C_IsDeviceReady(I2C_bus, addr, 2, 2);
}

int marble_I2C_send(I2C_BUS I2C_bus, uint8_t addr, const uint8_t *data, int size) {
   return HAL_I2C_Master_Transmit(I2C_bus, (uint16_t)addr, data, size, HAL_MAX_DELAY);
}

int marble_I2C_recv(I2C_BUS I2C_bus, uint8_t addr, uint8_t *data, int size) {
   return HAL_I2C_Master_Receive(I2C_bus, (uint16_t)addr, data, size, HAL_MAX_DELAY);
}

int marble_I2C_cmdrecv(I2C_BUS I2C_bus, uint8_t addr, uint8_t cmd, uint8_t *data, int size) {
   return HAL_I2C_Mem_Read(I2C_bus, (uint16_t)addr, cmd, 1, data, size, HAL_MAX_DELAY);
}

int marble_I2C_cmdrecv_a2(I2C_BUS I2C_bus, uint8_t addr, uint16_t cmd, uint8_t *data, int size) {
   return HAL_I2C_Mem_Read(I2C_bus, (uint16_t)addr, cmd, 2, data, size, HAL_MAX_DELAY);
}

int marble_SSP_write16(SSP_PORT ssp, uint16_t *buffer, unsigned size)
{
   SPI_CSB_SET(ssp, false);
   int rc = HAL_SPI_Transmit(ssp, (uint8_t*) buffer, size, HAL_MAX_DELAY);
   SPI_CSB_SET(ssp, true);
   return rc;
}

int marble_SSP_read16(SSP_PORT ssp, uint16_t *buffer, unsigned size)
{
   SPI_CSB_SET(ssp, false);
   int rc = HAL_SPI_Receive(ssp, (uint8_t*) buffer, size, HAL_MAX_DELAY);
   SPI_CSB_SET(ssp, true);
   return rc;
}

int marble_SSP_exch16(SSP_PORT ssp, uint16_t *tx_buf, uint16_t *rx_buf, unsigned size)
{
   SPI_CSB_SET(ssp, false);
   int rc = HAL_SPI_TransmitReceive(ssp, (uint8_t*) tx_buf, (uint8_t*) rx_buf,size, HAL_MAX_DELAY);
   SPI_CSB_SET(ssp, true);
   return rc;
}

uint32_t marble_MDIO_read(uint16_t reg)
{
   uint32_t value;
   printf("\r\nPHYread Stat: %d\r\n", HAL_ETH_ReadPHYRegister(&heth, reg, &value));
   return value;
}

uint32_t marble_init(bool use_xtal)
{
   (void) use_xtal;  // feature not yet supported with this chip

   // Must happen before any other clock manipulations:
   HAL_Init();
   SystemClock_Config_HSI();

   MX_GPIO_Init();

   // Configure GPIO interrupts
   marble_GPIOint_init();

   marble_PSU_pwr(true);
   MX_ETH_Init();
   MX_I2C1_Init();
   MX_I2C3_Init();
   MX_SPI1_Init();
   MX_SPI2_Init();

   marble_LED_init();
   marble_SW_init();
   marble_UART_init();

   printf("** Marble init done **\r\n");

   // Init SSP busses
   //marble_SSP_init(LPC_SSP0);
   //marble_SSP_init(LPC_SSP1);

   //marble_MDIO_init();
   return 0;
}
