==> BerkeleyLab/Marble-MMC/board_support/marblemini_v1/marble_board.c <==
#include "chip.h"
#include "stopwatch.h"
#include "marble_api.h"
#include "string.h"
#include <stdio.h>
#define UART_BAUD_RATE 115200
#define UART_SEND_RB_SZ 128
#define UART_RECV_RB_SZ 32

void marble_UART_init(void)
{
   /* Initialize UART0 pin connect
    * P0.2: TXD
    * P0.3: RXD */
   Chip_IOCON_PinMuxSet(LPC_IOCON, 0, 2, (IOCON_FUNC1 | IOCON_MODE_INACT));
   Chip_IOCON_PinMuxSet(LPC_IOCON, 0, 3, (IOCON_FUNC1 | IOCON_MODE_INACT));

   // Setup UART built-in FIFOs
   Chip_UART_SetBaud(LPC_UART0, UART_BAUD_RATE);
   Chip_UART_ConfigData(LPC_UART0, (UART_LCR_WLEN8 | UART_LCR_SBS_1BIT));
   Chip_UART_SetupFIFOS(LPC_UART0, (UART_FCR_FIFO_EN | UART_FCR_TRG_LEV2));
   Chip_UART_TXEnable(LPC_UART0);

   // Before using the ring buffers, initialize them using the ring buffer init function
   RingBuffer_Init(&rxring, rxbuff, 1, UART_RECV_RB_SZ);
   RingBuffer_Init(&txring, txbuff, 1, UART_SEND_RB_SZ);

   /* Reset and enable FIFOs, FIFO trigger level 3 (14 chars) */
   Chip_UART_SetupFIFOS(LPC_UART0, (UART_FCR_FIFO_EN | UART_FCR_RX_RS |
                                    UART_FCR_TX_RS | UART_FCR_TRG_LEV3));

   /* Enable receive data and line status interrupt */
   Chip_UART_IntEnable(LPC_UART0, (UART_IER_RBRINT | UART_IER_RLSINT));

   /* preemption = 1, sub-priority = 1 */
   NVIC_SetPriority(UART0_IRQn, 1);
   NVIC_EnableIRQ(UART0_IRQn);
}

int marble_UART_send(const char *str, int size)
{
   int sent=0;
   do {
      sent += Chip_UART_SendRB(LPC_UART0, &txring, str+sent, size-sent);
      for (int wait_cnt = UART_WAIT; wait_cnt > 0; wait_cnt--) {} // Busy-wait
   } while (sent < size);

   return sent;
}

int marble_UART_recv(char *str, int size)
{
   return Chip_UART_ReadRB(LPC_UART0, &rxring, str, size);
}

void marble_LED_set(uint8_t led_num, bool on)
{
   if (led_num < MAXLEDS) {
      /* Set state, low is on, high is off */
      Chip_GPIO_SetPinState(LPC_GPIO, ledports[led_num], ledpins[led_num], !on);
   }
}

bool marble_LED_get(uint8_t led_num)
{
   bool state = false;

   if (led_num < MAXLEDS) {
      state = Chip_GPIO_GetPinState(LPC_GPIO, ledports[led_num], ledpins[led_num]);
   }

   /* These LEDs are reverse logic. */
   return !state;
}

void marble_LED_toggle(uint8_t led_num)
{
   if (led_num < MAXLEDS) {
      Chip_GPIO_SetPinToggle(LPC_GPIO, ledports[led_num], ledpins[led_num]);
   }
}

void marble_FMC_pwr(bool on)
{
   const uint8_t fmc_port = 1;
   // EN_FMC1_P12V
   const uint8_t fmc1_pin = 27;
   Chip_GPIO_WriteDirBit(LPC_GPIO, fmc_port, fmc1_pin, true);
   Chip_GPIO_WritePortBit(LPC_GPIO, fmc_port, fmc1_pin, on);

   // EN_FMC2_P12V
   const uint8_t fmc2_pin = 19;
   Chip_GPIO_WriteDirBit(LPC_GPIO, fmc_port, fmc2_pin, true);
   Chip_GPIO_WritePortBit(LPC_GPIO, fmc_port, fmc2_pin, on);
}

uint8_t marble_FMC_status(void)
{
   uint8_t status = 0;
   status = WRITE_BIT(status, M_FMC_STATUS_FMC1_PWR,  Chip_GPIO_ReadPortBit(LPC_GPIO, 1, 27));
   status = WRITE_BIT(status, M_FMC_STATUS_FMC1_FUSE, Chip_GPIO_ReadPortBit(LPC_GPIO, 0, 23));
   status = WRITE_BIT(status, M_FMC_STATUS_FMC2_PWR,  Chip_GPIO_ReadPortBit(LPC_GPIO, 1, 19));
   status = WRITE_BIT(status, M_FMC_STATUS_FMC2_FUSE, Chip_GPIO_ReadPortBit(LPC_GPIO, 0, 24));
   return status;
}

void marble_PSU_pwr(bool on)
{
   Chip_GPIO_WriteDirBit(LPC_GPIO, 1, 31, true);
   Chip_GPIO_WritePortBit(LPC_GPIO, 1, 31, on);
}

uint8_t marble_PWR_status(void)
{
   uint8_t status = 0;
   status = WRITE_BIT(status, M_PWR_STATUS_PSU_EN, Chip_GPIO_ReadPortBit(LPC_GPIO, 1, 31));
   status = WRITE_BIT(status, M_PWR_STATUS_POE,    Chip_GPIO_ReadPortBit(LPC_GPIO, 1, 0));
   status = WRITE_BIT(status, M_PWR_STATUS_OTEMP,  Chip_GPIO_ReadPortBit(LPC_GPIO, 0, 29));
   return status;
}

bool marble_FPGAint_get(void)
{
   if (Chip_GPIO_ReadPortBit(LPC_GPIO, 0, 19) == 0x00) {
      return false;
   }
   return true;
}

void reset_fpga(void)
{
   /* Pulse the PROGRAM_B pin low; it's spelled PROG_B on schematic */
   const uint8_t rst_port = 0;
   const uint8_t rst_pin = 4;
   Chip_GPIO_WriteDirBit(LPC_GPIO, rst_port, rst_pin, true);
   for (int wait_cnt = 20; wait_cnt > 0; wait_cnt--) {
      /* Only the first call does anything, but the compiler
       * doesn't know that.  That keeps its optimizer from
       * eliminating the associated time delay.
       */
      Chip_GPIO_WritePortBit(LPC_GPIO, rst_port, rst_pin, false);
   }
   Chip_GPIO_WritePortBit(LPC_GPIO, rst_port, rst_pin, true);
   Chip_GPIO_WriteDirBit(LPC_GPIO, rst_port, rst_pin, false);
}

void marble_GPIOint_init(void)
{
   /* FPGA_DONE P0[5] */
   /* Configure GPIO interrupt pin as input and rising-edge */
   Chip_GPIO_WriteDirBit(LPC_GPIO, GPIOINT_PORT0, FPGA_DONE_INT_PIN, false);
   Chip_GPIOINT_SetIntRising(LPC_GPIOINT, GPIOINT_PORT0, 1 << FPGA_DONE_INT_PIN);

   /* Enable interrupt in the NVIC */
   NVIC_ClearPendingIRQ(GPIO_IRQn);
   NVIC_EnableIRQ(GPIO_IRQn);
}

int marble_I2C_probe(I2C_BUS I2C_bus, uint8_t addr) {
   uint8_t data;
   addr = addr >> 1;
   return Chip_I2C_MasterRead(I2C_bus, addr, &data, 1) != 1;
}

int marble_I2C_send(I2C_BUS I2C_bus, uint8_t addr, const uint8_t *data, int size) {
   addr = addr >> 1;
   return Chip_I2C_MasterSend(I2C_bus, addr, data, size) != size;
}

int marble_I2C_recv(I2C_BUS I2C_bus, uint8_t addr, uint8_t *data, int size) {
   addr = addr >> 1;
   return Chip_I2C_MasterRead(I2C_bus, addr, data, size) != size;
}

int marble_I2C_cmdrecv(I2C_BUS I2C_bus, uint8_t addr, uint8_t cmd, uint8_t *data, int size) {
   addr = addr >> 1;
   return Chip_I2C_MasterCmdRead(I2C_bus, addr, cmd, data, size) != size;
}

int marble_I2C_cmdrecv_a2(I2C_BUS I2C_bus, uint8_t addr, uint16_t cmd, uint8_t *data, int size) {
   // Swap cmd endianness
   uint8_t cmd_be[2];
   cmd_be[0] = cmd >> 8;
   cmd_be[1] = cmd & 0xff;

   // Setup low-level transfer
   // Based on Chip_I2C_MasterCmdRead in i2c_17xx_40xx.c
   I2C_XFER_T xfer = {0};
   xfer.slaveAddr = addr >> 1;
   xfer.txBuff = cmd_be;
   xfer.txSz = 2;
   xfer.rxBuff = data;
   xfer.rxSz = size;
   while (Chip_I2C_MasterTransfer(I2C_bus, &xfer) == I2C_STATUS_ARBLOST) {}
   // printf("marble_I2C_cmdrecv_a2: %u %u\n", i2cx, xfer.rxSz);
   return xfer.rxSz != 0;
}

int marble_SSP_write16(SSP_PORT ssp, uint16_t *buffer, unsigned size)
{
   return Chip_SSP_WriteFrames_Blocking(ssp, (uint8_t*) buffer, size*2); // API expectes length in bytes
}

int marble_SSP_read16(SSP_PORT ssp, uint16_t *buffer, unsigned size)
{
   return Chip_SSP_ReadFrames_Blocking(ssp, (uint8_t*) buffer, size*2);
}

int marble_SSP_exch16(SSP_PORT ssp, uint16_t *tx_buf, uint16_t *rx_buf, unsigned size)
{
   Chip_SSP_DATA_SETUP_T set;
   set.tx_data = tx_buf;
   set.tx_cnt = 0;
   set.rx_data = rx_buf;
   set.rx_cnt = 0;
   set.length = size;
   return Chip_SSP_RWFrames_Blocking(ssp, &set);
}

uint32_t marble_MDIO_read(uint16_t reg)
{
   Chip_ENET_StartMIIRead(LPC_ETHERNET, reg);
   while (Chip_ENET_IsMIIBusy(LPC_ETHERNET));
   return Chip_ENET_ReadMIIData(LPC_ETHERNET);
}

uint32_t marble_init(bool use_xtal)
{
   // Must happen before any other clock manipulations:
   SystemCoreClockUpdate(); /* Update the value of SystemCoreClock */

   if (use_xtal) {
      Chip_SetupXtalClocking();
   } else {
      Chip_SetupIrcClocking(); // 120 MHz based on 12 MHz internal clock
   }

   SystemCoreClockUpdate(); /* Update the value of SystemCoreClock (120 MHz) */

   // Initialize system stopwatch
   StopWatch_Init();

   marble_LED_init();
   marble_SW_init();
   marble_UART_init();

   // Init GPIO interrupts
   marble_GPIOint_init();

   // Init I2C busses in interrupt mode
   marble_I2C_init(I2C0, !I2C_POLL);
   marble_I2C_init(I2C1, !I2C_POLL);
   marble_I2C_init(I2C2, !I2C_POLL);
   I2C_IPMB = I2C0;
   I2C_PM = I2C1;
   I2C_FPGA = I2C2;

   // Init SSP busses
   marble_SSP_init(LPC_SSP0);
   //marble_SSP_init(LPC_SSP1);
   SSP_FPGA = LPC_SSP0;
   SSP_PMOD = LPC_SSP1;

   marble_MDIO_init();

   return SystemCoreClock;
}
